unpackaged/main/default/objects/Hates__c/Hates__c.object-meta.xml
<CustomObject>
    <label>Hate</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Hates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>