unpackaged/main/default/objects/Hates__c/fields/Airline_Seat_Hate__c.field-meta.xml
<CustomField>
    <fullName>Airline_Seat_Hate__c</fullName>
    <label>Airline Seat Hate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Middle</fullName>
            </value>
            <value>
                <fullName>Aisle</fullName>
            </value>
            <value>
                <fullName>Window</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>