unpackaged/main/default/objects/Hates__c/fields/Avid_Wine_Collector__c.field-meta.xml
<CustomField>
    <fullName>Avid_Wine_Collector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avid Wine Collector</label>
    <type>Checkbox</type>
</CustomField>