unpackaged/main/default/objects/Hates__c/fields/Gym__c.field-meta.xml
<CustomField>
    <fullName>Gym__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gym</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Client_Hates</relationshipName>
    <type>Lookup</type>
</CustomField>