unpackaged/main/default/objects/Hates__c/fields/Hated__c.field-meta.xml
<CustomField>
    <fullName>Hated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hated</label>
    <type>Checkbox</type>
</CustomField>