unpackaged/main/default/objects/Hates__c/fields/Hated_Seating_Class__c.field-meta.xml
<CustomField>
    <fullName>Hated_Seating_Class__c</fullName>
    <label>Hated Seating Class</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Economy Plus</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>