unpackaged/main/default/objects/Hates__c/fields/Hated_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Hated_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor Account - Restaurant, Vendor Account - Generic</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>General_Hates9</relationshipName>
    <type>Lookup</type>
</CustomField>