unpackaged/main/default/objects/Hates__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>