unpackaged/main/default/objects/Hates__c/fields/Room_Hate__c.field-meta.xml
<CustomField>
    <fullName>Room_Hate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Room Hate</label>
    <type>TextArea</type>
</CustomField>