unpackaged/main/default/objects/Hates__c/fields/Security_Q_A__c.field-meta.xml
<CustomField>
    <fullName>Security_Q_A__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Security Q&amp;A</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>