unpackaged/main/default/objects/Hates__c/fields/Sports_Played__c.field-meta.xml
<CustomField>
    <fullName>Sports_Played__c</fullName>
    <label>Sports Played</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abseiling</fullName>
            </value>
            <value>
                <fullName>Aerobics</fullName>
            </value>
            <value>
                <fullName>Aikido</fullName>
            </value>
            <value>
                <fullName>Archery</fullName>
            </value>
            <value>
                <fullName>Artistic gymnastics</fullName>
            </value>
            <value>
                <fullName>Badminton</fullName>
            </value>
            <value>
                <fullName>BASE jumping</fullName>
            </value>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Baton twirling</fullName>
            </value>
            <value>
                <fullName>Bobsleigh</fullName>
            </value>
            <value>
                <fullName>Bodyboarding</fullName>
            </value>
            <value>
                <fullName>Bodybuilding</fullName>
            </value>
            <value>
                <fullName>Bouldering</fullName>
            </value>
            <value>
                <fullName>Bowling</fullName>
            </value>
            <value>
                <fullName>Boxing</fullName>
            </value>
            <value>
                <fullName>Canoeing</fullName>
            </value>
            <value>
                <fullName>Climbing</fullName>
            </value>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Cross-country cycling</fullName>
            </value>
            <value>
                <fullName>Cross-country equestrianism</fullName>
            </value>
            <value>
                <fullName>Cross-country running</fullName>
            </value>
            <value>
                <fullName>Cross-country skiing</fullName>
            </value>
            <value>
                <fullName>Curling</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Discus throw</fullName>
            </value>
            <value>
                <fullName>Diving</fullName>
            </value>
            <value>
                <fullName>Dodgeball</fullName>
            </value>
            <value>
                <fullName>Equestrianism</fullName>
            </value>
            <value>
                <fullName>Fencing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>