unpackaged/main/default/objects/Hates__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Suggested</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Avoid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>