unpackaged/main/default/objects/Hates__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amarone</fullName>
            </value>
            <value>
                <fullName>Barbaresco</fullName>
            </value>
            <value>
                <fullName>Barlool</fullName>
            </value>
            <value>
                <fullName>Barolo</fullName>
            </value>
            <value>
                <fullName>Beaujolais</fullName>
            </value>
            <value>
                <fullName>Beaujolais Nouveau</fullName>
            </value>
            <value>
                <fullName>Bordeaux</fullName>
            </value>
            <value>
                <fullName>Bourbon</fullName>
            </value>
            <value>
                <fullName>Burgundy</fullName>
            </value>
            <value>
                <fullName>Cabernet Franc</fullName>
            </value>
            <value>
                <fullName>Cabernet Sauvignon</fullName>
            </value>
            <value>
                <fullName>Champagne</fullName>
            </value>
            <value>
                <fullName>Chardonnay</fullName>
            </value>
            <value>
                <fullName>Chenin Blanc</fullName>
            </value>
            <value>
                <fullName>Chianti</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Cognac</fullName>
            </value>
            <value>
                <fullName>Falanghina</fullName>
            </value>
            <value>
                <fullName>Gamay</fullName>
            </value>
            <value>
                <fullName>Gewurtztraminer</fullName>
            </value>
            <value>
                <fullName>Gin</fullName>
            </value>
            <value>
                <fullName>Grenache</fullName>
            </value>
            <value>
                <fullName>Gruner</fullName>
            </value>
            <value>
                <fullName>Ice Wine</fullName>
            </value>
            <value>
                <fullName>Malbec</fullName>
            </value>
            <value>
                <fullName>Merlot</fullName>
            </value>
            <value>
                <fullName>Mexican</fullName>
            </value>
            <value>
                <fullName>Mezcal</fullName>
            </value>
            <value>
                <fullName>Moschofilero</fullName>
            </value>
            <value>
                <fullName>Nebbiolo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>