unpackaged/main/default/objects/Hates__c/fields/Support_Line__c.field-meta.xml
<CustomField>
    <fullName>Support_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Support Line</label>
    <type>Phone</type>
</CustomField>