unpackaged/main/default/objects/Hates__c/fields/Vacation_Locale_Hate__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Locale_Hate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vacation Locale Hate</label>
    <type>TextArea</type>
</CustomField>