unpackaged/main/default/objects/Hates__c/recordTypes/Airline_and_Flight_Hates.recordType-meta.xml
<RecordType>
    <fullName>Airline_and_Flight_Hates</fullName>
    <active>true</active>
    <label>Airline Hates</label>
</RecordType>