unpackaged/main/default/objects/Hates__c/recordTypes/Car_Rental_Hates.recordType-meta.xml
<RecordType>
    <fullName>Car_Rental_Hates</fullName>
    <active>true</active>
    <label>Car Rental Hates</label>
</RecordType>