unpackaged/main/default/objects/Hates__c/recordTypes/Client_Hates.recordType-meta.xml
<RecordType>
    <fullName>Client_Hates</fullName>
    <active>true</active>
    <label>Client Hates</label>
</RecordType>