unpackaged/main/default/objects/Hates__c/recordTypes/Cocktail_Hates.recordType-meta.xml
<RecordType>
    <fullName>Cocktail_Hates</fullName>
    <active>true</active>
    <label>Cocktail Hates</label>
</RecordType>