unpackaged/main/default/objects/Hates__c/recordTypes/Dining_Hate.recordType-meta.xml
<RecordType>
    <fullName>Dining_Hate</fullName>
    <active>true</active>
    <label>Dining Hate</label>
</RecordType>