unpackaged/main/default/objects/Hates__c/recordTypes/Entertainment_Hates.recordType-meta.xml
<RecordType>
    <fullName>Entertainment_Hates</fullName>
    <active>true</active>
    <label>Entertainment Hates</label>
</RecordType>