unpackaged/main/default/objects/Hates__c/recordTypes/Food_Hates.recordType-meta.xml
<RecordType>
    <fullName>Food_Hates</fullName>
    <active>true</active>
    <label>Food Hates</label>
</RecordType>