unpackaged/main/default/objects/Hates__c/recordTypes/Hotel_Hates.recordType-meta.xml
<RecordType>
    <fullName>Hotel_Hates</fullName>
    <active>true</active>
    <label>Hotel Hates</label>
</RecordType>