unpackaged/main/default/objects/Hates__c/recordTypes/Other_Hates.recordType-meta.xml
<RecordType>
    <fullName>Other_Hates</fullName>
    <active>true</active>
    <label>Personal Wellness and Other Hates</label>
</RecordType>