unpackaged/main/default/objects/Hates__c/recordTypes/Wine_Hates.recordType-meta.xml
<RecordType>
    <fullName>Wine_Hates</fullName>
    <active>true</active>
    <label>Wine Hates</label>
</RecordType>